# Metrix

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  COPYING  Changelog.md  LICENSE  Linda-qt.pro  Makefile.am  README.md  autogen.sh  configure.ac  libbitcoinconsensus.pc.in  pkg.m4
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: install_bdb_v4-8.sh
.github/workflows/: cpp-linter.yml  cpp-make.yml
build-aux/m4/: ax_boost_base.m4  ax_gcc_func_attribute.m4  bitcoin_find_bdb48.m4  bitcoin_subdir_to_include.m4
build_msvc/: bitcoin_config.h
ci/lint/: 05_before_script.sh  (+1 more)
contrib/: README.md  USING-GITIAN.md  bitcoind.bash-completion  gitian-build.py  metrix-cli.bash-completion  metrix-tx.bash-completion  metrixd.bash-completion  tidy_datadir.sh
depends/: Makefile  README  README.md  README.packages  README.usage  config.guess  config.site.in  config.sub  description.md  funcs.mk  packages.md
doc/: README.md  README_osx.txt  REST-interface.md  alerts.md  build-freebsd.md  build-linux-crosscompile.md  build-linux-msw.md  build-msw.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  coding.md  gitian-building.md  init.md  release-process.md  sparknet-guide.md  systemd.md
share/: genbuild.sh  setup.nsi  setup.nsi.in
src/: .clang-format  Makefile.am  Makefile.bench.include  Makefile.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  activemasternode.h  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bignum.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  (+150 more)
src/bench/: wallet_balance.cpp
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  glibcxx_compat.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  params.h  tx_verify.cpp
src/core/: block.cpp  block.h  transaction.cpp  transaction.h
src/crypto/: common.h
src/interfaces/: chain.cpp  chain.h  node.cpp  node.h  wallet.cpp
src/json/: json_spirit_reader_template.h
src/leveldb/util/: env_win.cc
src/node/: context.cpp  context.h  psbt.cpp  transaction.cpp  transaction.h
src/policy/: feerate.cpp  policy.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: abifunctionfield.h  abiparam.h  abiparamitem.h  abiparamsfield.h  addressbookpage.cpp  addressfield.cpp  addressfield.h  addresstablemodel.cpp  addtokenpage.h  askpassphrasedialog.cpp  bitcoin.cpp  bitcoin.qrc  bitcoinaddressvalidator.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  callcontract.h  contracttablemodel.cpp  contractutil.cpp  contractutil.h  createcontract.cpp  createcontract.h  editaddressdialog.cpp  eventlog.h  execrpccommand.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  macnotificationhandler.mm  masternodemanager.cpp  masternodemanager.h  mrctoken.cpp  mrctoken.h  navigationbar.h  openuridialog.cpp  paymentrequest.proto  paymentserver.cpp  qswitchcontrol.cpp  (+26 more)
src/qt/forms/: addtokenpage.ui  coincontroldialog.ui  contractbookpage.ui  createcontract.ui  editcontractinfodialog.ui  masternodemanager.ui  modaloverlay.ui  mrctoken.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsentry.ui  sendtokenpage.ui  signverifymessagedialog.ui  stakepage.ui  titlebar.ui  tokendescdialog.ui
src/qt/locale/: bitcoin_ar.ts  bitcoin_ca.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el.ts  bitcoin_en.ts  bitcoin_en_GB.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_VE.ts  bitcoin_et.ts  bitcoin_eu.ts  bitcoin_fa.ts  bitcoin_fi.ts  bitcoin_fil.ts  bitcoin_fr.ts  bitcoin_he.ts  bitcoin_hi.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id.ts  bitcoin_is.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk.ts  bitcoin_km.ts  bitcoin_ko.ts  bitcoin_ku_IQ.ts  bitcoin_ky.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_lv.ts  bitcoin_mk.ts  (+34 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/styles/theme1/: tableviewlight.css
src/qt/res/styles/theme2/: config.ini  tableviewlight.css
src/qt/res/styles/theme3/: app.css  config.ini  navbutton.css  navgroupbutton.css  navsubgroupbutton.css  treeview.css
src/qt/test/: addressbooktests.h  paymentrequestdata.h  paymentservertests.cpp  rpcnestedtests.cpp  rpcnestedtests.h  test_main.cpp  uritests.cpp  wallettests.cpp  wallettests.h
src/qtum/: qtumDGP.cpp  qtumDGP.h  qtumstate.cpp  qtumstate.h  qtumutils.h  storageresults.cpp  storageresults.h
src/rpc/: blockchain.cpp  client.cpp  mining.cpp  misc.cpp  net.cpp  rawtransaction.cpp  rawtransaction_util.cpp  util.cpp  util.h
src/script/: bitcoinconsensus.cpp  bitcoinconsensus.h  compressor.cpp  compressor.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  signingprovider.h  standard.cpp  standard.h
src/test/: amount_tests.cpp  base58_tests.cpp  key_tests.cpp  rpc_tests.cpp  scheduler_tests.cpp  setup_common.cpp  setup_common.h  sigopcount_tests.cpp  util.cpp
src/test/qtumtests/: dgp_tests.cpp  test_utils.h
src/univalue/: gen.cpp  univalue.cpp  univalue.h  univalue_escapes.h  univalue_read.cpp  univalue_write.cpp
src/univalue/lib/: univalue_read.cpp
src/univalue/test/: fail45.json
src/util/: contractabi.cpp  contractabi.h  system.cpp  time.cpp  translation.h  validation.cpp
src/wallet/: db.cpp  db.h  feebumper.cpp  init.cpp  load.cpp  psbtwallet.cpp  rpcdump.cpp  rpcwallet.cpp  salvage.cpp  salvage.h  scriptpubkeyman.cpp  scriptpubkeyman.h  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  wallettool.cpp  walletutil.h
src/wallet/test/: coinselector_tests.cpp  ismine_tests.cpp  psbt_wallet_tests.cpp  wallet_tests.cpp
src/zmq/: zmqrpc.cpp
(+194 files in other folders)
